# macoop

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.bat  macoop.h
demos/: animal.c  animal_demo.c  main.c
demos/animal_demo/: animal_demo.c
demos/animal_demo/inc/: animal.h  typedefs.h
demos/animal_demo/src/: animal.c
demos/inc/: animal.h  animal_demo.h  playground.h  typedefs.h
include/: macoop.h  mgmc.h
include/mgmc/: mgmc_bool.h  mgmc_core.h  mgmc_prv_bool.h  mgmc_prv_tuple.h  mgmc_prv_util.h
