cmake_minimum_required(VERSION 3.24)

# ==================================================================================================
# Project name
# ==================================================================================================
project(macoop C)
set(bin_name macoop_demo)

# ==================================================================================================
# Option
# ==================================================================================================
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ==================================================================================================
# Output path
# ==================================================================================================
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# ==================================================================================================
# Include
# ==================================================================================================
set(inc PUBLIC demos/inc include)
include_directories(inc) # Include directories for CMake to search

# ==================================================================================================
# Input
# ==================================================================================================
file(GLOB_RECURSE src demos/*.c)

# ==================================================================================================
# Compiler options
# ==================================================================================================
if(MSVC)
    add_compile_options(/Zc:preprocessor)
endif()

# ==================================================================================================
# Build executable
# ==================================================================================================
add_executable(${bin_name} ${src})
target_include_directories(${bin_name} ${inc}) # Set compiler include directories
set_target_properties(${bin_name} PROPERTIES VERSION 0.1 SOVERSION 0) # Set properties
if(WIN32)
    target_link_libraries(${bin_name} ws2_32)
endif()

# ==================================================================================================
# Install location
# ==================================================================================================
install(
    TARGETS ${bin_name}
    ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib
    LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
    RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
